<resources>
    <string name="app_name" translatable="false">StuDo</string>
    <string name="logo" translatable="false">LOGO</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="card_number">Card number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_verification">Check your email to activate account</string>
    <string name="empty_field_error">Fill in the entry field</string>
    <string name="small_password_error">Password must be at least 6 characters</string>
    <string name="wrong_email_error">Enter correct email address</string>
    <string name="not_equal_password_error">Passwords must be the same</string>
    <string name="reset_password">Reset password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="check_email_to_reset">Check your email to change password</string>
    <string name="title_ads">Ads</string>
    <string name="title_resumes">Resumes</string>
    <string name="title_profile">Profile</string>
    <string name="create">Create</string>
    <string name="my_ads">My ads</string>
    <string name="my_resumes">My resumes</string>
    <string name="favourites">Favourites</string>
    <string name="organizations">Organizations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="fullName" translatable="false">%1$s %2$s</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="changes_saved">Changes saved</string>
    <string name="old_email">Old email</string>
    <string name="new_email">New email</string>
    <string name="confirm_new_email">Confirm new email</string>
    <string name="new_email_verification">Check your new email to change it</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_changed">Password changed</string>
    <string name="added_favourites">Added to favourites</string>
    <string name="removed_favourites">Removed from favourites</string>
    <string name="registration">Registration</string>
    <string name="authorization">Authorization</string>
    <string name="comments">Comments</string>
    <string name="date">Date</string>
    <string name="ad">Ad</string>
    <string name="dark_theme">Dark theme</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="create_ad">Creating ad</string>
    <string name="edit_ad">Editing ad</string>
    <string name="title_hint"><font size="24">Title</font></string>
    <string name="short_desc_hint">Short description</string>
    <string name="desc">Description</string>
    <string name="only_date">Only date</string>
    <string name="not_selected">Not selected</string>
    <string name="select_date_range">Select dates</string>
    <string name="begin_time">Begin</string>
    <string name="end_time">"End "</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="create_resume">Creating resume</string>
    <string name="edit_resume">Editing resume</string>
    <string name="resume">Resume</string>
    <string name="type_comment_hint">Add comment…</string>
    <string name="send_comment">Send comment</string>
    <string name="close_comments">Close comments</string>
    <string name="delete">Delete</string>
    <string name="delete_ad_confirmation">Do you want to delete an ad?</string>
    <string name="delete_resume_confirmation">Do you want to delete a resume?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_ads">User ads</string>
    <string name="user_resumes">User resumes</string>
    <string name="user_profile">User profile</string>
    <string name="delete_comment_confirmation">Do you want to delete a comment?</string>
    <string name="send_email">Send email…</string>
    <string name="empty_ads">No ads</string>
    <string name="empty_resumes">No resumes</string>
    <string name="empty_favourites">No favourites</string>
    <string name="studo_desc">StuDo it\'s a service for events organization and promotion inside RTU MIREA university</string>
    <string name="studo_site_title">StuDo site</string>
    <string name="vk_group_title">VK group</string>
    <string name="source_code_title">Source code</string>
    <string name="studo_site_url" translatable="false">https://studo.rtuitlab.ru</string>
    <string name="vk_group_url" translatable="false">https://vk.com/rtuitlab</string>
    <string name="source_code_url" translatable="false">https://github.com/RTUITLab/StuDo-Android</string>
    <string name="version_holder" translatable="false">v%1$s</string>
    <string name="dark_theme_label">Dark</string>
    <string name="light_theme_label">Light</string>
    <string name="system_theme_label">System</string>
    <string name="theme">Theme</string>
</resources>
