<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.rtuitlab.studo.viewmodels.AccountChangesDialogsViewModel" />
        <variable
            name="dialog"
            type="com.rtuitlab.studo.ui.general.profile.dialogs.ChangeEmailDialog" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:hint="@string/old_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                android:text="@={viewModel.old}"
                app:bindAfterTextChanged="@{dialog::checkData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="1dp"
            android:hint="@string/new_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                android:text="@={viewModel.new}"
                app:bindAfterTextChanged="@{dialog::checkData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmNewEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:hint="@string/confirm_new_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                android:text="@={viewModel.confirm}"
                app:bindAfterTextChanged="@{dialog::checkData}"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</layout>